# internal/estate/handler/handler.go
@@ -25,7 +25,18 @@ func (h *EstateHandler) GetEstateStats(ctx echo.Context, estateID uuid.UUID) err
 		})
 	}
 
-	return ctx.JSON(http.StatusCreated, result)
+	return ctx.JSON(http.StatusOK, result)
+}
+
+func (h *EstateHandler) GetEstateDronePlan(ctx echo.Context, estateID uuid.UUID) error {
+	result, err := h.usecase.GetEstateDronePlan(ctx.Request().Context(), estateID)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, generated.ErrorResponse{
+			Message: err.Error(),
+		})
+	}
+
+	return ctx.JSON(http.StatusOK, result)
 }
 
 func (h *EstateHandler) CreateEstate(ctx echo.Context) error {
