# internal/server/endpoints.go
@@ -1,6 +1,7 @@
 package server
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/SawitProRecruitment/UserService/generated"
@@ -8,14 +9,18 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-func (s *Server) GetHello(ctx echo.Context) error {
-	return ctx.JSON(http.StatusOK, generated.HelloResponse{
-		Message: "Hello, 🌏! ദ്ദി(⎚_⎚)",
-	})
+func (s *Server) GetHello(ctx echo.Context, params generated.GetHelloParams) error {
+	var resp generated.HelloResponse
+	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
+	return ctx.JSON(http.StatusOK, resp)
 }
 
 func (s *Server) GetEstateStats(ctx echo.Context, uuid uuid.UUID) error {
 	return s.estateHandler.GetEstateStats(ctx, uuid)
+}
+
+func (s *Server) GetEstateDronePlan(ctx echo.Context, uuid uuid.UUID) error {
+	return s.estateHandler.GetEstateDronePlan(ctx, uuid)
 }
 
 func (s *Server) CreateEstate(ctx echo.Context) error {
